removed token from auth response

--- a/src/main/resources/locales/en_US.json
+++ b/src/main/resources/locales/en_US.json
@@ -1,59 +1,6 @@
 {
 	"label": "Pipefy",
 	"description": "Actions for interacting with Salesforce Objects and the Salesforce API",
-	"Authenticate.label": "Authenticate",
-	"Authenticate.description": "Authenticates via the Salesforce API to generate an Access Token",
-	"Authenticate.node_label": "Authenticate",
-	"Authenticate.return_label": "Access Token Response",
-	"Authenticate.session.label": "Session Name",
-	"Authenticate.loginURL.label": "Base URL for your Salesforce Env",
-	"Authenticate.loginURL.description": "Without trailing slash - Example: https://ap17.salesforce.com",
-	"Authenticate.clientID.label": "Client ID",
-	"Authenticate.clientSecret.label": "Client Secret",
-	"Authenticate.username.label": "Salesforce Username",
-	"Authenticate.username.description": "User must have access to authenticate via API",
-	"Authenticate.password.label": "Salesforce Password",
-	"Execute_SOQL.label": "Execute SOQL",
-	"Execute_SOQL.description": "Execute a SOQL Query and get a response as JSON",
-	"Execute_SOQL.node_label": "SOQL Query",
-	"Execute_SOQL.return_label": "Query Response (JSON on success)",
-	"Execute_SOQL.loginURL.label": "Base URL for your Salesforce Env",
-	"Execute_SOQL.loginURL.description": "Without trailing slash - Example: https://ap17.salesforce.com",
-	"Execute_SOQL.session.label": "Session Name",
-	"Execute_SOQL.access_token.label": "Access Token",
-	"Execute_SOQL.access_token.description": "Value as returned from the Authenticate action",
-	"Execute_SOQL.SOQL_Query.label": "SOQL Query to execute",
-	"UpdateObject.label": "Update Object",
-	"UpdateObject.node_label": "Update Object",
-	"UpdateObject.description": "Update Object by ObjectID and Type",
-	"UpdateObject.return_label": "Update Object Response ('Object Updated Successfully' on success)",
-	"UpdateObject.loginURL.label": "Base URL for your Salesforce Env",
-	"UpdateObject.loginURL.description": "Without trailing slash - Example: https://ap17.salesforce.com",
-	"UpdateObject.session.label": "Session Name",
-	"UpdateObject.access_token.label": "Access Token",
-	"UpdateObject.access_token.description": "Value as returned from the Authenticate action",
-	"UpdateObject.objectType.label": "Object Type for Updating",
-	"UpdateObject.objectType.description": "Example: Case, User, Opportunity, etc.",
-	"UpdateObject.fieldToUpdate.label": "Value(s) To update (as key value pairs)",
-	"UpdateObject.objectID.label": "ObjectID of object to update",
-	"UpdateObject.updatedValue.label": "Value(s) to Update (as key value pairs)",
-	"UpdateObject.fieldToUpdate.description":"Dictionary of fields to be updated where key is the Object Attribute name (OwnerId for example) and value is the intended update value.",
-	"UpdateObject.updatedValue.description": "Enter the value you want used for the update",
-	"InsertObject.label": "Insert Object",
-	"InsertObject.node_label": "Insert Object",
-	"InsertObject.description" : "Create Salesforce Objects",
-	"InsertObject.return_label": "Insert Object Response",
-	"InsertObject.return_description": "New Object ID is returned on success, error message on failure",
-	"InsertObject.insertJSON.label": "Value(s) to Insert (as key value pairs)",
-	"InsertObject.insertJSON.description": "Dictionary of fields to be updated where key is the Object Attribute name (OwnerId for example) and value is the intended update value.",
-	"deleteObject.label": "Delete Object",
-	"deleteObject.node_label": "Delete Object",
-	"deleteObject.description" : "Delete a Salesforce Object",
-	"deleteObject.return_label": "Delete Object Response",
-	"deleteObject.return_description": "Successfully deleted message on success, error body on failure",
-	"delete.objectID.label": "Object ID for object targetted for deletion",
-	"delete.objectType.label": "Object Type for Deletion",
-	"delete.objectType.description": "Example: Case, User, Opportunity, etc.",
 	"GetACardByID.session.label": "Session Name",
 	"GetACardByID.pipefyToken.label": "Pipefy Token",
 	"GetACardByID.cardID.label": "Card ID",
@@ -63,13 +10,35 @@
 	"GetACardByID.return_label": "Return JSON Content",
 	"GetACardByID.return_description": "Returns the content of the card in JSON format. Use the JSON package to query your JSON structure.",
 	"GetACardByID.node_label": "Get a Card By ID",
+	"CreateCard.label": "Create Card",
+	"CreateCard.description": "Creates a card for a Pipe based on the dictionary inserted and the Pipe's ID",
 	"CreateCard.session.label": "Session Name",
 	"CreateCard.pipefyToken.label": "Pipefy Token",
-	"CreateCard.cardFields.label": "Dictionary with the fields and values to create a card in Pipefy",
 	"CreateCard.pipeID.label": "Pipe ID",
 	"CreateCard.pipeID.description": "Pipe ID of the Pipe to create a card in",
 	"CreateCard.return_label": "Card ID",
 	"CreateCard.return_description": "ID of the card created",
-	"CreateCard.node_label": "Create Card"
-
+	"CreateCard.node_label": "Create Card",
+	"CreateCard.cardFields.label": "Cards Fields",
+	"CreateCard.cardFields.description": "Dictionary with the fields and values to create a card in Pipefy",
+	"CreateRecord.label": "Create Record",
+	"CreateRecord.description": "Creates a record for a Database based on the dictionary inserted and the Database's ID",
+	"CreateRecord.session.label": "Session Name",
+	"CreateRecord.pipefyToken.label": "Pipefy Token",
+	"CreateRecord.tableID.label": "Database ID",
+	"CreateRecord.tableID.description": "Database ID of the Database to create a record in",
+	"CreateRecord.return_label": "Record ID",
+	"CreateRecord.return_description": "ID of the record created",
+	"CreateRecord.node_label": "Create Record",
+	"CreateRecord.recordFields.label": "Record's Fields",
+	"CreateRecord.recordFields.description": "Dictionary with the fields and values to create a record in Pipefy",
+	"CustomQuery.session.label": "Session Name",
+	"CustomQuery.pipefyToken.label": "Pipefy Token",
+	"CustomQuery.customQueryInput.label": "Custom Query",
+	"CustomQuery.customQueryInput.description": "Custom query to be executed",
+	"CustomQuery.label": "Send Custom Query",
+	"CustomQuery.description": "Executes a custom query",
+	"CustomQuery.return_label": "Return JSON Content",
+	"CustomQuery.return_description": "Returns the content of the query in JSON format. Use the JSON package to query your JSON structure.",
+	"CustomQuery.node_label": "Send Custom Query"
 }
