--- a/src/main/resources/locales/en_US.json
+++ b/src/main/resources/locales/en_US.json
@@ -1,6 +1,6 @@
 {
 	"label": "Pipefy",
-	"description": "Actions for interacting with Salesforce Objects and the Salesforce API",
+	"description": "Actions for interacting with Pipefy's Cards, Pipes, records and etc; all through the Pipefy API",
 	"GetACardByID.session.label": "Session Name",
 	"GetACardByID.pipefyToken.label": "Pipefy Token",
 	"GetACardByID.cardID.label": "Card ID",
@@ -10,6 +10,15 @@
 	"GetACardByID.return_label": "Return JSON Content",
 	"GetACardByID.return_description": "Returns the content of the card in JSON format. Use the JSON package to query your JSON structure.",
 	"GetACardByID.node_label": "Get a Card By ID",
+	"GetARecordByID.session.label": "Session Name",
+	"GetARecordByID.pipefyToken.label": "Pipefy Token",
+	"GetARecordByID.recordID.label": "Record ID",
+	"GetARecordByID.recordID.description": "ID of the record being searched",
+	"GetARecordByID.label": "Get a Record By ID",
+	"GetARecordByID.description": "Gets the information of the record by the ID inserted",
+	"GetARecordByID.return_label": "Return JSON Content",
+	"GetARecordByID.return_description": "Returns the content of the record in JSON format. Use the JSON package to query your JSON structure.",
+	"GetARecordByID.node_label": "Get a Record By ID",
 	"CreateCard.label": "Create Card",
 	"CreateCard.description": "Creates a card for a Pipe based on the dictionary inserted and the Pipe's ID",
 	"CreateCard.session.label": "Session Name",
@@ -32,6 +41,17 @@
 	"CreateRecord.node_label": "Create Record",
 	"CreateRecord.recordFields.label": "Record's Fields",
 	"CreateRecord.recordFields.description": "Dictionary with the fields and values to create a record in Pipefy",
+	"UpdateFieldsValues.label": "Update Fields Values",
+	"UpdateFieldsValues.description": "Updates a card's fields based on the fields Ids and Values",
+	"UpdateFieldsValues.session.label": "Session Name",
+	"UpdateFieldsValues.pipefyToken.label": "Pipefy Token",
+	"UpdateFieldsValues.cardID.label": "Card ID",
+	"UpdateFieldsValues.cardID.description": "Card ID of the card to be updated",
+	"UpdateFieldsValues.return_label": "Return JSON",
+	"UpdateFieldsValues.return_description": "JSON Returned",
+	"UpdateFieldsValues.node_label": "Update Fields Values",
+	"UpdateFieldsValues.cardFields.label": "Cards Fields",
+	"UpdateFieldsValues.cardFields.description": "Dictionary with the fields and values to be updated in Pipefy",
 	"CustomQuery.session.label": "Session Name",
 	"CustomQuery.pipefyToken.label": "Pipefy Token",
 	"CustomQuery.customQueryInput.label": "Custom Query",
@@ -40,5 +60,49 @@
 	"CustomQuery.description": "Executes a custom query",
 	"CustomQuery.return_label": "Return JSON Content",
 	"CustomQuery.return_description": "Returns the content of the query in JSON format. Use the JSON package to query your JSON structure.",
-	"CustomQuery.node_label": "Send Custom Query"
+	"CustomQuery.node_label": "Send Custom Query",
+	"GetPhaseCards.label": "Get Phase Cards",
+	"GetPhaseCards.node_label": "Get Phase Cards",
+	"GetPhaseCards.description": "Get all cards from a given phase in Pipefy.",
+	"GetPhaseCards.return_label": "Return JSON Content",
+	"GetPhaseCards.return_description": "Returns the content of the phase's cards in JSON format. Use the JSON package to query your JSON structure.",
+	"GetPhaseCards.session.label": "Session Name",
+	"GetPhaseCards.pipefyToken.label": "Pipefy Token",
+	"GetPhaseCards.phaseId.label": "Phase ID",
+	"GetPhaseCards.phaseId.description": "Pipefy Phase ID of the Phase you want to get the cards from.",
+	"MoveCard.label": "Move Card",
+	"MoveCard.node_label": "Move Card",
+	"MoveCard.description": "Move a Pipefy card from the current phase to the selected phase.",
+	"MoveCard.return_label": "Return JSON Content",
+	"MoveCard.return_description": "Returns the content of the moved card in JSON format. Use the JSON package to query your JSON structure.",
+	"MoveCard.session.label": "Session Name",
+	"MoveCard.pipefyToken.label": "Pipefy Token",
+	"MoveCard.cardID.label": "Card ID",
+	"MoveCard.cardID.description": "Pipefy Card ID of the card to be moved.",
+	"MoveCard.destinationPhaseId.label": "Destination Phase ID",
+	"MoveCard.destinationPhaseId.description": "Pipefy Phase ID of the Phase to which you want to move the card.",
+	"UploadAttachment.label": "Upload Attachment",
+	"UploadAttachment.description": "Appends a File to a field in Pipefy",
+	"UploadAttachment.session.label": "Session Name",
+	"UploadAttachment.pipefyToken.label": "Pipefy Token",
+	"UploadAttachment.cardID.label": "Card ID",
+	"UploadAttachment.cardID.description": "Card ID of the card to be updated",
+	"UploadAttachment.return_label": "Return JSON",
+	"UploadAttachment.return_description": "JSON Returned",
+	"UploadAttachment.node_label": "Upload Attachment",
+	"UploadAttachment.fileName.label": "File Name",
+	"UploadAttachment.fileName.description": "Name of the file to be uploaded",
+	"UploadAttachment.fileContent.label": "File",
+	"UploadAttachment.fileContent.description": "File to be inserted",
+	"UploadAttachment.fieldID.label": "Field Id",
+	"UploadAttachment.fieldID.description": "Id of the field to have the file uploaded to",
+	"DeleteCard.session.label": "Session Name",
+	"DeleteCard.pipefyToken.label": "Pipefy Token",
+	"DeleteCard.cardID.label": "Card ID",
+	"DeleteCard.cardID.description": "ID of the card being deleted",
+	"DeleteCard.label": "Delete Card",
+	"DeleteCard.description": "Deletes the card by the ID inserted",
+	"DeleteCard.return_label": "Return JSON Content",
+	"DeleteCard.return_description": "Returns the content of the card in JSON format. Use the JSON package to query your JSON structure.",
+	"DeleteCard.node_label": "Delete Card"
 }
